--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="#contact" class="menu_left">About</a>
         <a href="#edu" class="menu_left">Education</a>
         <a href="#sco" class="menu_left">Scores</a>
+        <a href="#course" class="menu_left">Online Course</a>
         <a href="#sm" class="menu_left">Social Media</a>
     </nav>
     <div id="flex_container">
